# edu-assistant

./: config.yml  main.py  pyproject.toml
src/edu_assistant/: config.py  llm_client.py
